--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -73,36 +73,25 @@
             
 
             <p>
-              The replication crisis is now widely acknowledged across academic fields. Methods like Data Science and
-              Cloud Computing are advancing to be applied by all domains, and Open Research practices like publishing
-              datasets, documenting computational methods and improving reproducibility with containers, computational
-              workflows and open source tools is gradually being taken up by eager researchers and enthusiastic
-              communities.
+              The replication crisis is now widely acknowledged across academic fields. Open Research practices such as publishing
+              datasets, documenting computational methods and improving reproducibility with containers are gradually 
+              being taken up by some research communities.
             </p>
             <p>
-              However these additional data and software resources that support a traditional scholarly publication are
-              often fragmented across multiple repositories and services, and add additional provenance and metadata
-              challenges such as versioning, attribution, citation, access and persistent identifiers. The concept of a 
+              However, the additional data, metadata, provenance and software artifacts that such practices produce are
+              often fragmented across multiple repositories and services. The concept of a 
               <em>Research Object</em> has been proposed as a mechanism to gather these resources in a package or archive
-              combined with structured machine-readable metadata, however the uptake of this methodology seem to be slow.
+              combined with structured machine-readable metadata.
             </p>
             <p>
-              In this work we explore briefly well-established and emerging standards for structured metadata and
-              provenance of scholarly digital objects and datasets.
-              To investigate any actual practice of providing structured metadata in scholarly archives
-              we therefore examined deposit patterns with the use case of Zenodo, 
-              a European-wide Open Repository of data, software and publications,
-              popular across a wide range of research domains, 
-              and hosting a variety of file formats and deposit types.
+              To investigate the actual uptake of research objects and more broadly the usage of provenance metadata,
+              we examined deposit patterns in Zenodo, a large and popular open repository of data, software and publications.
             </p> 
             <p>
               After gathering and analyzing record-level metadata for the 
               3.5 million Zenodo records, we sampled and downloaded a subset of 
               the 124k (~ 3.5%) deposited ZIP archives to further analyze their 
-              composition in terms of file names and extensions.
-              We argue their composite nature of mixed content, with potentially diverging
-              provenance, makes them prime candidates for utilizing manifests of structured metadata to
-              augment existing record-level schemas such as DataCite. 
+              composition.
             </p>
             <p>
               Our study reveals that while most deposits lack embedded metadata or detailed provenance, 
@@ -113,10 +102,9 @@
               need a consistent structure or extended metadata to be consumed computationally.
             </p>
             <p>
-              Finally we propose recommendations for improving the practice of providing provenance and structured metadata
+              Based on our study and review of research object specifications, we propose recommendations for improving the practice of providing provenance and structured metadata
               in scholarly repositories, in particular with a view of supporting their automated consumption by
-              downstream aggregators and individual researchers, aiming for a minimal provenance profile that can be
-              largely populated automatically.
+              downstream aggregators and individual researchers, aiming for a minimal provenance profile that can be populated automatically.
             </p>
           </div>
         </section>
