--- a/static/ipaw-2020.html
+++ b/static/ipaw-2020.html
@@ -75,31 +75,20 @@
             <p>
               The replication crisis is now widely acknowledged across academic fields. Open Research practices such as publishing
               datasets, documenting computational methods and improving reproducibility with containers are gradually 
-              being taken up by some research communities.
-            </p>
-            <p>
-              However, the additional data, metadata, provenance and software artifacts that such practices produce are
-              often fragmented across multiple repositories and services. The concept of a 
+              being taken up by some research communities. However, the additional data, metadata, provenance and software artifacts that such practices produce are
+              often fragmented across multiple repositories and services. The notion of a 
               <em>Research Object</em> has been proposed as a mechanism to gather these resources in a package or archive
               combined with structured machine-readable metadata.
             </p>
             <p>
               To investigate the actual uptake of research objects and more broadly the usage of provenance metadata,
               we examined deposit patterns in Zenodo, a large and popular open repository of data, software and publications.
-            </p> 
-            <p>
               After gathering and analyzing record-level metadata for the 
               3.5 million Zenodo records, we sampled and downloaded a subset of 
               the 124k (~ 3.5%) deposited ZIP archives to further analyze their 
-              composition.
-            </p>
-            <p>
-              Our study reveals that while most deposits lack embedded metadata or detailed provenance, 
+              composition. Our study reveals that while most deposits lack embedded metadata or detailed provenance, 
               there are beacons of hope, cases where we suggest depositors have been encouraged by best practices within 
               specific communities and where metadata augmentation is inherently supported by their domain-specific tooling.
-              In addition, we found that a comparable subset of Zenodo records (~ 4%) consists of multiple files; such
-              records can themselves be considered as research object-like packages, but 
-              need a consistent structure or extended metadata to be consumed computationally.
             </p>
             <p>
               Based on our study and review of research object specifications, we propose recommendations for improving the practice of providing provenance and structured metadata
