--- a/static/ipaw-2020.html
+++ b/static/ipaw-2020.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Where did all the provenance go?</title>
+  <title>Where did all the provenance go? Analyzing the uptake of research objects in Zenodo</title>
   <link href="https://dokie.li/media/css/lncs.css" media="all" rel="stylesheet" title="LNCS" />
   <link disabled="" href="https://dokie.li/media/css/acm.css" media="all" rel="stylesheet alternate" title="ACM" />
   <link href="https://dokie.li/media/css/dokieli.css" media="all" rel="stylesheet" />
