--- a/static/ipaw-2020.html
+++ b/static/ipaw-2020.html
@@ -91,9 +91,8 @@
               specific communities and where metadata augmentation is inherently supported by their domain-specific tooling.
             </p>
             <p>
-              Based on our study and review of research object specifications, we propose recommendations for improving the practice of providing provenance and structured metadata
-              in scholarly repositories, in particular with a view of supporting their automated consumption by
-              downstream aggregators and individual researchers, aiming for a minimal provenance profile that can be populated automatically.
+              Based on this study and review of research object specifications, we propose recommendations for improving the practice of providing provenance and structured metadata
+              in scholarly repositories.
             </p>
           </div>
         </section>
