--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -15,7 +15,7 @@
   typeof="schema:CreativeWork prov:Entity">
   <main>
     <article about="" typeof="schema:ScholarlyArticle">
-      <h1 property="schema:name">Where did all the provenance go?</h1>
+      <h1 property="schema:name">Where did all the provenance go? An analysis of research objects in a large data repository</h1>
 
       <div id="authors">
         <dl id="author-name">
