some reproducibility crisis text

--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -92,10 +92,42 @@
         <section id="background" rel="schema:hasPart" resource="#background">
           <h2 property="schema:name">Background</h2>
           <div datatype="rdf:HTML" property="schema:description">
-            <p>We are</p>
+            <p></p>
           </div>
           <section id="reproducibility-crisis" rel="schema:hasPart" resource="#reproducibility-crisis">
             <h3 property="schema:name">Reproducibility crisis as motivation</h3>
+            <p>In the last two decades, academia has increasingly recognized the dangers of a 
+              <a href="https://doi.org/10.1038/533452a">reproducibility crisis</a>[1] affecting published research 
+              across a <a href="https://doi.org/10.5860/crl.79.1.2">number of diciplines</a>[2].
+              While in general <em>reproducibility</em> can be considered achieving the same 
+              results using same methods, materials and data, the wider goal of <em>replicability</em> 
+              is finding equivalent results using the same methods but on new data. 
+            </p>             
+            <p>
+              Significant advances in scholarly practices have emerged, in 
+              particular most journals now require underlying data to be made 
+              availabilty in open repositories, and 
+              "data available on request" statements are increasingly 
+              recognized as bad practice. 
+            </p>
+            <p>
+              An increasing amount of scientific data is collected and 
+              subsequently made openly available 
+              in digital form, yet often data is processed with a lack of 
+              <a href="https://doi.org/10.1111/j.1740-9713.2015.00827.x">statistical and 
+              analytical skills</a>[3] or without taking 
+              <a href="https://doi.org/10.1371%2Fjournal.pcbi.1005412">robustness measures</a> to 
+              ensure the software methods are understandable and reusable by
+              other researchers [4] (and future self). 
+            </p>
+            <p>
+              It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
+              that instead of focusing on a misleading narrative 
+              of a "crisis", science should promote transparancy and reproducibility
+              as a revolution that is empowering researchers to do better science.[5]
+              A good question to then ask is to what extend researchers are already 
+              taken advantage of the new tools and practices.
+            </p>
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
             <h3 property="schema:name">Research Objects as the answer</h3>
@@ -179,7 +211,37 @@
           <h2>References</h2>
           <div>
             <ol>
-              <li id="ref-1" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
+              <li id="ref-1" property="schema:citation">
+                Monya Baker (2016): 
+                <b>1,500 scientists lift the lid on reproducibility</b>.
+                <i>Nature</i> <b>533</b>, 452–454 
+                <a href="https://doi.org/10.1038/533452a">https://doi.org/10.1038/533452a</a>
+              </li>
+              <li id="ref-2" property="schema:citation">
+                Franklin Sayre, Amy Riegelman (2018):
+                <b>The Reproducibility Crisis and Academic Libraries</b>.
+                <i>College & Research Libraries</i> <b>79</b>(1)
+                <a href="https://doi.org/10.5860/crl.79.1.2">https://doi.org/10.5860/crl.79.1.2</a>
+                </li>
+              <li id="ref-3" property="schema:citation">
+                Roger Peng (2015):
+                <b>The reproducibility crisis in science: A statistical counterattack</b>.
+                <i>Significance</i> <b>12</b>(13)
+                <a href="https://doi.org/10.1111/j.1740-9713.2015.00827.x">https://doi.org/10.1111/j.1740-9713.2015.00827.x</a>
+              </li>
+              <li id="ref-4" property="schema:citation"></li>
+                Morgan Taschuk, Greg Wilson (2017):
+                <b>Ten simple rules for making research software more robust</b>
+                <i>PLoS Computational Biology</i> <b>13</b>(4)
+                <a href="https://doi.org/10.1371%2Fjournal.pcbi.1005412">https://doi.org/10.1371%2Fjournal.pcbi.1005412</a>
+              </li> 
+              <li id="ref-5" property="schema:citation">
+                Daniele Fanelli (2018):
+                <b>Opinion: Is science really facing a reproducibility crisis, and do we need it to?</b>
+                <i>PNAS</i> <b>115</b>(11)
+                <a href="https://doi.org/10.1073/pnas.1708272114">https://doi.org/10.1073/pnas.1708272114</a>
+              </li>
+              <li id="ref-xx" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
                 Ainsworth, Jiten Bhagat, Phillip Couch, Don Cruickshank, Mark Delderfield, Ian Dunlop, Matthew Gamble,
                 Danius Michaelides, Stuart Owen, David Newman, Shoaib Sufi, Carole Goble (2013):
                 <b>Why Linked Data is Not Enough for Scientists</b>,
