a bit on workflows (more needed!):

--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -105,28 +105,39 @@
             </p>             
             <p>
               Significant advances in scholarly practices have emerged, in 
-              particular most journals now require underlying data to be made 
-              availabilty in open repositories, and 
-              "data available on request" statements are increasingly 
-              recognized as bad practice. 
+              particular journals now frequently require underlying data 
+              to be made availabilty in open repositories, and use of 
+              blanket statements like
+              "data available on request" is starting to be  
+              recognized as bad practice.
             </p>
             <p>
-              An increasing amount of scientific data is collected and 
-              subsequently made openly available 
-              in digital form, yet often data is processed with a lack of 
+              While an increasing amount of scientific data is now digitally
+              collected and subsequently made openly available, 
+              often the data is processed without sufficient  
               <a href="https://doi.org/10.1111/j.1740-9713.2015.00827.x">statistical and 
-              analytical skills</a>[3] or without taking 
+              analytical skills</a>[3] or without taking simple
               <a href="https://doi.org/10.1371%2Fjournal.pcbi.1005412">robustness measures</a> to 
               ensure the software methods are understandable and reusable by
-              other researchers [4] (and future self). 
+              other researchers [4] (this may include future self). 
+            </p>
+            <p>
+              The practice of using <em>scientific workflows</em> to capture the 
+              digital analysis method was 
+              <a href="https://doi.org/10.1007/978-1-84628-757-2">promoted early</a>
+              to improve reproducibility 
+              and consistency [6], but also to capture 
+              <a href="http://ceur-ws.org/Vol-83/prov_2.pdf">provenance of workflow executions</a>[7]
+              that track how result data is derived from other data.
             </p>
             <p>
               It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
               that instead of focusing on a misleading narrative 
               of a "crisis", science should promote transparancy and reproducibility
               as a revolution that is empowering researchers to do better science.[5]
-              A good question to then ask is to what extend researchers are already 
-              taken advantage of the new tools and practices.
+              A relevant question then is to what extent researchers have already 
+              taken advantage of the new tools and practices in data that has been 
+              published openly.
             </p>
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
@@ -241,6 +252,22 @@
                 <i>PNAS</i> <b>115</b>(11)
                 <a href="https://doi.org/10.1073/pnas.1708272114">https://doi.org/10.1073/pnas.1708272114</a>
               </li>
+              <li id="ref-6" property="schema:citation">
+                Ian J. Taylor, Ewa Deelman, Dennis B. Gannon, Matthew Shields (Eds.) (2007):
+                <b>Workflows for e-Science: Scientific Workflows for Grids</b>
+                Springer-Verlag London. ISBN 978-1-84628-757-2 
+                <a href="https://doi.org/10.1007/978-1-84628-757-2">https://doi.org/10.1007/978-1-84628-757-2</a>
+              </li>
+
+              <li id="ref-7" property="schema:citation">
+              
+                  Jun Zhao, Carol Goble, Mark Greenwood, Chris Wroe, Robert Stevens. (2003).
+                  <strong>"Annotating, linking and browsing provenance logs for e-Science,"</strong>
+                  <em>International Semantic Web Conference</em> 2003.
+                  <em>CEUR Workshop Proceedings</em> <strong>83</strong>
+                  <a href="http://ceur-ws.org/Vol-83/prov_2.pdf">http://ceur-ws.org/Vol-83/prov_2.pdf</a></p>
+              </li>
+
               <li id="ref-xx" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
                 Ainsworth, Jiten Bhagat, Phillip Couch, Don Cruickshank, Mark Delderfield, Ian Dunlop, Matthew Gamble,
                 Danius Michaelides, Stuart Owen, David Newman, Shoaib Sufi, Carole Goble (2013):
