a bit about FAIR and EU

--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -155,23 +155,38 @@
               notebooks in source repositories like GitHub and GitLab.
             </p>
             <p>
-              Software Citation practices such as publishing
-              code releases from GitHub with a 
+              <a href="https://doi.org/10.7717/peerj-cs.86">Software Citation practices</a> [11], 
+              such as publishing code releases from GitHub with a 
               <a href="https://guides.github.com/activities/citable-code/">DOI from Zenodo</a>,
-              are now actively encouraged by some journals like GigaScience. 
+              are now actively encouraged by journals like GigaScience that 
+              encourage reproducibility.  Funding councils
+              are increasingly requiring 
+              Data Management Plans (DMP), where depositing 
+              in open repositores under a liberal license like 
+              Creative Commons Attribution 
+              (<a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a>)
+              is highly encouraged. The FAIR principles 
+              <a href="https://doi.org/10.1038/sdata.2016.18">FAIR</a> 
+              that put importance on interoperability and metadata              
+              is being <a href="https://doi.org/10.2777/836532">recognized</a>
+              by the European Commission [10], required by its 
+              next funding program 
+              <a href="https://ec.europa.eu/info/sites/info/files/research_and_innovation/strategy_on_research_and_innovation/presentations/horizon_europe_en_investing_to_shape_our_future.pdf"><Horizon Europe/a> 
+              and essential part of the European Open Science Cloud (<a href="https://www.eosc-portal.eu/">EOSC</a>).
+           </p>
+           <p>
 
-
-              
-            </p>
+           </p>
 
             <p>
-              It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
-              that instead of focusing on a misleading narrative 
+              It has however been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
+              that rather than of focusing on a narrow narrative 
               of a "crisis", science should promote transparancy and reproducibility
-              as a revolution that is empowering researchers to do better science.[5]
-              A relevant question then is to what extent researchers have already 
-              taken advantage of the new tools and practices in data that has been 
-              published openly.
+              as a revolution that is empowering researchers to do better science [5].
+              While policy makers, developers and publishers have laid the foundation 
+              for Open Research and FAIR data sharing, a relevant question is to 
+              what extent researchers have already 
+              taken advantage of the new practices.
             </p>
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
@@ -309,11 +324,28 @@
                   <a href="https://doi.org/10.1016/j.future.2017.05.041">https://doi.org/10.1016/j.future.2017.05.041</a>
                   <small>(not Open Access, see <a href="https://hal.archives-ouvertes.fr/hal-01544818">preprint hal-01544818</a>)</small>
               </li>
-              <li id="ref-8" property="schema:citation">
+              <li id="ref-9" property="schema:citation">
                 Carole Goble, Sarah Cohen-Boulakia, Stian Soiland-Reyes, Daniel Garijo, Yolanda Gil, Michael R. Crusoe, Kristian Peters, Daniel Schober (2020):
                 <strong>FAIR Computational Workflows</strong></a>.
                 <em>Data Intelligence</em>  <strong>2</strong>(1):108–121
                 <a href="https://doi.org/10.1162/dint_a_00033" target="_blank" class=" externalLink">https://doi.org/10.1162/dint_a_00033</a>
+              </li>
+
+              <li id="ref-10" property="schema:citation">
+              Directorate-General for Research and Innovation (European Commission) (2019):
+              <strong>Future of scholarly publishing and scholarly communication</strong>.
+              Jean-Claude Guédon, Michael Jubb, Bianca Kramer, Mikael Laakso, Birgin Scmidt, Elena Šimukovič, Jennifer Hansen, 
+              Robert Kiley, Anne Kitson, Wim van der Stelt, Kamilla Markram, Mark Petterson (eds.)             
+              Report of the Expert Group to the European Commission.
+              ISBN 978-92-79-97238-6
+              <a href="https://doi.org/10.2777/836532">https://doi.org/10.2777/836532</a>
+              </li>
+
+              <li id="ref-11" property="schema:citation"></li>
+                Arfon M. Smith​, Daniel S. Katz​​, Kyle E. Niemeyer​, FORCE11 Software Citation Working Group (2016):
+                <strong>Software citation principles</strong>
+                <em>PeerJ Computer Science</em> <strong>2</strong>:e86
+                <a href="https://doi.org/10.7717/peerj-cs.86">https://doi.org/10.7717/peerj-cs.86</a>
               </li>
 
               <li id="ref-xx" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
@@ -324,7 +356,6 @@
                 <strong>29</strong>(2) pp 599-611.
                 <a href="https://doi.org/10.1016/j.future.2011.08.004">https://doi.org/10.1016/j.future.2011.08.004</a>
                 <small>(not Open Access, see <a href="http://users.ox.ac.uk/~oerc0033/preprints/research-objects.pdf">preprint</a>)</small>
-
               </li>
             </ol>
           </div>
