only FAIR to cite FAIR

--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -165,13 +165,13 @@
               in open repositores under a liberal license like 
               Creative Commons Attribution 
               (<a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a>)
-              is highly encouraged. The FAIR principles 
-              <a href="https://doi.org/10.1038/sdata.2016.18">FAIR</a> 
-              that put importance on interoperability and metadata              
+              is highly encouraged. The  
+              <a href="https://doi.org/10.1038/sdata.2016.18">FAIR principles</a> 
+              that put importance on interoperability and metadata [12]          
               is being <a href="https://doi.org/10.2777/836532">recognized</a>
               by the European Commission [10], required by its 
               next funding program 
-              <a href="https://ec.europa.eu/info/sites/info/files/research_and_innovation/strategy_on_research_and_innovation/presentations/horizon_europe_en_investing_to_shape_our_future.pdf"><Horizon Europe/a> 
+              <a href="https://ec.europa.eu/info/sites/info/files/research_and_innovation/strategy_on_research_and_innovation/presentations/horizon_europe_en_investing_to_shape_our_future.pdf">Horizon Europe</a> 
               and essential part of the European Open Science Cloud (<a href="https://www.eosc-portal.eu/">EOSC</a>).
            </p>
            <p>
@@ -179,7 +179,7 @@
            </p>
 
             <p>
-              It has however been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
+              It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
               that rather than of focusing on a narrow narrative 
               of a "crisis", science should promote transparancy and reproducibility
               as a revolution that is empowering researchers to do better science [5].
@@ -341,11 +341,18 @@
               <a href="https://doi.org/10.2777/836532">https://doi.org/10.2777/836532</a>
               </li>
 
-              <li id="ref-11" property="schema:citation"></li>
+              <li id="ref-11" property="schema:citation">
                 Arfon M. Smith​, Daniel S. Katz​​, Kyle E. Niemeyer​, FORCE11 Software Citation Working Group (2016):
                 <strong>Software citation principles</strong>
                 <em>PeerJ Computer Science</em> <strong>2</strong>:e86
                 <a href="https://doi.org/10.7717/peerj-cs.86">https://doi.org/10.7717/peerj-cs.86</a>
+              </li>
+
+              <li id="ref-12" property="schema:citation">
+                Mark D. Wilkinson, Michel Dumontier, IJsbrand Jan Aalbersberg, Gabrielle Appleton, Myles Axton, Arie Baak, Niklas Blomberg, Jan-Willem Boiten, Luiz Bonino da Silva Santos, Philip E. Bourne, Jildau Bouwman, Anthony J. Brookes, Tim Clark, Mercè Crosas, Ingrid Dillo, Olivier Dumon, Scott Edmunds, Chris T. Evelo, Richard Finkers, Alejandra Gonzalez-Beltran, Alasdair J.G. Gray, Paul Groth, Carole Goble, Jeffrey S. Grethe, Jaap Heringa, Peter A.C ’t Hoen, Rob Hooft, Tobias Kuhn, Ruben Kok, Joost Kok, Scott J. Lusher, Maryann E. Martone, Albert Mons, Abel L. Packer, Bengt Persson, Philippe Rocca-Serra, Marco Roos, Rene van Schaik, Susanna-Assunta Sansone, Erik Schultes, Thierry Sengstag, Ted Slater, George Strawn, Morris A. Swertz, Mark Thompson, Johan van der Lei, Erik van Mulligen, Jan Velterop, Andra Waagmeester, Peter Wittenburg, Katherine Wolstencroft, Jun Zhao & Barend Mons (2016):
+                <strong>The FAIR Guiding Principles for scientific data management and stewardship</strong>
+                <em>Scientific Data</em> <strong>3</strong>:160018
+                <a href="https://doi.org/10.1038/sdata.2016.18">https://doi.org/10.1038/sdata.2016.18</a>
               </li>
 
               <li id="ref-xx" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
