.. and more on crisis

--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -100,7 +100,7 @@
             <p></p>
           </div>
           <section id="reproducibility-crisis" rel="schema:hasPart" resource="#reproducibility-crisis">
-            <h3 property="schema:name">Reproducibility crisis as motivation</h3>
+            <h3 property="schema:name">Reproducibility crisis as motivation for FAIR Open Research</h3>
             <p>In the last two decades, academia has increasingly recognized the dangers of a 
               <a href="https://doi.org/10.1038/533452a">reproducibility crisis</a> [1] affecting published research 
               across a <a href="https://doi.org/10.5860/crl.79.1.2">number of diciplines</a> [2].
@@ -112,8 +112,7 @@
               Significant advances in scholarly practices have emerged, in 
               particular journals now frequently require underlying data 
               to be made availabilty in open repositories, and use of 
-              blanket statements like
-              "data available on request" is starting to be  
+              blanket statements like "data available on request" is starting to be  
               recognized as bad practice.
             </p>
             <p>
@@ -181,11 +180,12 @@
             <p>
               It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
               that rather than of focusing on a narrow narrative 
-              of a "crisis", science should promote transparancy and reproducibility
-              as a revolution that is empowering researchers to do better science [5].
+              of a reproducibility "crisis", science should promote transparancy and 
+              replicability as an ongoing scolarly revolution that is 
+              empowering researchers to do better science [5].
               While policy makers, developers and publishers have laid the foundation 
               for Open Research and FAIR data sharing, a relevant question is to 
-              what extent researchers have already 
+              what extent individual researchers have already 
               taken advantage of the new practices.
             </p>
           </section>
